# 2048-haskell

./: CHANGELOG.md  README.md  leaderboard.txt  logs.txt  x2048-haskell.cabal
src/: Main.hs  test.py
