cabal-version:      2.4
name:               x2048-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jason Yapri
maintainer:         jason.yapri@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

executable x2048-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      random >=1.1 && <1.2,
                      bytestring >=0.10 && <0.11,
                      transformers >=0.5 && <0.6,
                      mtl >=2.2 && <2.3,
                      time >=1.8 && <1.10
    hs-source-dirs:   src
    default-language: Haskell2010
